# MELODIES-MONET

./: NOTICE  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml
ci/: check-for-license-header.py
docs/: conf.py  environment-docs.yml  index.rst
docs/appendix/: machine-specific-install.rst  troubleshooting.rst  yaml.rst
docs/applications/: forecasts.rst  other_tools.rst  publications.rst
docs/develop/: contribute.rst  datasets.rst  developers_guide.rst  development_team.rst  other_resources.rst
docs/examples/: AEROMMA_UFS-AQM_Plots.ipynb  UFS-AQM_ozone_sonder.yaml  aircraft_pairing.rst  airnow_wrfchem_reg.ipynb  control_camchem.yaml  control_camchem_se.yaml  control_read_looped_aircraft_AEROMMA_UFS_AQM.yaml  control_ufsaqm_ozonesonde.yaml  ufs-aqm-gml-ozonesonde.md
docs/getting_started/: downloading_obs.rst  how_to_run.rst  installation.rst  new_to_python.rst  software_architecture.rst  tutorials.rst
docs/users_guide/: description.rst  introduction.rst  region_selection.rst  supported_datasets.rst  supported_plots.rst  supported_stats.rst
examples/forecast_evaluation/: Monet-analysis-example-plots-wrf-rapchemtest.py  Monet-analysis-example-plots-wrf-rapchemtest_aeronet.py  daily.monet-eval_sites.sh  folium_site_map_aeronet.py  folium_site_map_airnow.py  reformat_aeronet_rapchemtest.py  reformat_airnow_rapchemtest.py  site_analysis_aeronet.py  site_analysis_airnow.py
examples/jupyter_notebooks/: UFS-AQM_mopitt_example.ipynb  UFS-AQM_tropomi_no2_example.ipynb  iagos_ufsaqm.ipynb
melodies_monet/: __init__.py  __main__.py  _cli.py  driver.py  tutorial.py
scripts/: subsetter.py
sip_specific_tools/: README.md
(+68 files in other folders)
